--- a/index.html
+++ b/index.html
@@ -1,35 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Certificado Digital</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
-    
 </head>
+
 <body>
   <div class="container">
     <div class="logo-container">
-        <img src="assets/logo.png" alt="Logo" class="logo">
-        <span class="logo-text">Descomplicando o <br>seu certificado digital</span>
+      <img src="assets/logo.png" alt="Logo" class="logo">
+      <span class="logo-text">Descomplicamos o <br> seu certificado digital</span>
     </div>
     <img src="assets/hero1.png" alt="Imagem principal" class="hero">
 
-    <h1>
-      Certificado Digital com Preço Imbatível,<br>
-      Suporte 24h e Garantia de Emissão é na Certsign
+    <h1 style="margin-right: 45px;">
+      Certificado Digital com Preço Imbatível,
+      <span id="title-normal">
+        Suporte 24h e Garantia de Emissão é na Certsign
+      </span>
     </h1>
 
     <p class="description">
-      Se você precisa de um certificado confiável e acessível, chegou ao lugar certo! Aqui, oferecemos preços imbatíveis, suporte 24h e garantia de emissão, para que você tenha a tranquilidade de estar protegido a qualquer hora, com total suporte e sem surpresas.
+      Se você precisa de um certificado confiável e acessível, chegou ao lugar certo! Aqui, oferecemos preços
+      imbatíveis, suporte 24h e garantia de emissão, para que você tenha a tranquilidade de estar protegido a qualquer
+      hora, com total suporte e sem surpresas.
     </p>
 
     <a href="#" class="cta-button">
       Quero meu certificado!
       <img src="assets/arrow.png" alt="Ícone botão">
     </a>
+    <img src="assets/button2.png" alt="Button" class="button2" >
   </div>
+  <div class="faixa-separadora">
+    <img src="assets/faixa.png" alt="Faixa separadora" style="width:100%;display:block;">
+  </div>
+   <section class="certificado-section">
+    <div class="container">
+      <h2>
+        Por que escolher o <span>nosso certificado digital?</span>
+      </h2>
+
+      <div class="item">
+        <img src="assets/check.png" alt="Check" class=".icon-check" />
+        <div>
+          <h3>Preço baixo, sem comprometer a qualidade!</h3>
+          <p>Certificado digital mais barato do mercado e com máxima segurança e confiabilidade!</p>
+        </div>
+        <div class="divider"></div>
+      </div>
+
+      <div class="item">
+        <img src="assets/check.png" alt="Check" class=".icon-check" />
+        <div>
+          <h3>Suporte 24h para você!</h3>
+          <p>Nosso atendimento está sempre disponível para ajudar.</p>
+        </div>
+        <div class="divider"></div>
+      </div>
+
+      <div class="item">
+        <img src="assets/check.png" alt="Check" class=".icon-check" />
+        <div>
+          <h3>Garantia de remissão 100%</h3>
+          <p>Com a nossa garantia de remissão, você tem total segurança de que o seu certificado será emitido sem qualquer complicação.</p>
+        </div>
+        <div class="divider"></div>
+      </div>
+    </div>
+  </section>
+  <section class="mais-vendidos-section">
+  <div class="mais-vendidos-container">
+    <p class="mais-vendidos-subtitulo">KIT SELECIONADO</p>
+    <h2 class="mais-vendidos-titulo">
+      Conheça os certificados<br />
+      <strong>mais vendidos pela Certify</strong>
+    </h2>
+
+    <div class="mais-vendidos-produto">
+      <img src="assets/notebook.png" alt="Notebook com certificado" class="mais-vendidos-img" />
+      <div class="mais-vendidos-info">
+        <h3>📜 Certificado PJ A1</h3>
+        <p class="mais-vendidos-preco">R$ 109,90</p>
+        <p class="mais-vendidos-parcelado">ou 10x R$ 10,99</p>
+      </div>
+    </div>
+
+    <button class="mais-vendidos-cta">Quero meu certificado!</button>
+  </div>
+</section>
+
 </body>
+
 </html>
